CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (LearnCpp)

# message(${BOOST_DIR})

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-g -std=c++98")
IF ( CMAKE_COMPILER_IS_GNUCC )
    SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall")
ENDIF()
IF ( MSVC )
    SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W4")
ENDIF()
 
SET(BOOST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/boost)
FIND_PACKAGE(Boost 1.7 REQUIRED)
FIND_PACKAGE(Threads)

SET (HEADER ${CMAKE_CURRENT_SOURCE_DIR}/src) 
SET (HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include ${HEADER}) 
SET (HEADER ${BOOST_ROOT} ${HEADER})
INCLUDE_DIRECTORIES (${HEADER})
# LINK_DIRECTORIES (/lib /usr/lib64/)

ADD_DEFINITIONS(-DLoggerLevel=${LOGGER_LEVEL})
ADD_DEFINITIONS(-DLoggerThread=yes)
ADD_DEFINITIONS(-DLoggerFile=yes)
ADD_DEFINITIONS(-DLoggerFunc=yes)

ENABLE_TESTING()

ADD_SUBDIRECTORY(src/thread)
ADD_SUBDIRECTORY(src/pipe)
ADD_SUBDIRECTORY(src/epoll)