CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (CodeChiev)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXXFLAGS "-g -std=c++03")


SET(BOOST_ROOT "${BOOST_DIR}")
FIND_PACKAGE(Boost 1.6 REQUIRED)
FIND_PACKAGE(Threads)


SET (HEADER ${CMAKE_CURRENT_SOURCE_DIR})
SET (HEADER ${HEADER} ${BOOST_ROOT})
INCLUDE_DIRECTORIES (${HEADER})

ADD_DEFINITIONS(-DLoggerThread=1)
ADD_DEFINITIONS(-DLoggerFile=1)
ADD_DEFINITIONS(-DLoggerFunc=1)

ENABLE_TESTING()
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(examples)


