CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (CodeChiev)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXXFLAGS "-g -std=c++03")


SET(BOOST_ROOT "${BOOST_DIR}")
FIND_PACKAGE(Boost 1.6 REQUIRED)
FIND_PACKAGE(Threads)


SET (HEADER ${CMAKE_CURRENT_SOURCE_DIR})
SET (HEADER ${HEADER} ${BOOST_ROOT})
INCLUDE_DIRECTORIES (${HEADER})

ADD_DEFINITIONS(-DLoggerLevel=Debug)
ADD_DEFINITIONS(-DLoggerThread=yes)
ADD_DEFINITIONS(-DLoggerFile=yes)
ADD_DEFINITIONS(-DLoggerFunc=yes)

ENABLE_TESTING()
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(examples)


