CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT (CodeChiev)

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-g -std=c++98")
IF ( CMAKE_COMPILER_IS_GNUCC )
    SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall")
ENDIF()
IF ( MSVC )
    SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W4")
ENDIF()

SET(BOOST_ROOT "${BOOST_DIR}")
FIND_PACKAGE(Boost 1.6 REQUIRED)
FIND_PACKAGE(Threads)


SET (HEADER ${CMAKE_CURRENT_SOURCE_DIR})
SET (HEADER ${HEADER} ${BOOST_ROOT})
INCLUDE_DIRECTORIES (${HEADER})

ADD_DEFINITIONS(-DLoggerLevel=${LOGGER_LEVEL})
ADD_DEFINITIONS(-DLoggerThread=yes)
ADD_DEFINITIONS(-DLoggerFile=yes)
ADD_DEFINITIONS(-DLoggerFunc=yes)

ENABLE_TESTING()
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(libev)
ADD_SUBDIRECTORY(examples)


