# add_executable (tcpserver_test tcpserver_test.cpp)
# target_link_libraries (tcpserver_test ccv_ev) 

# add_executable (tcpclient_test tcpclient_test.cpp)
# target_link_libraries (tcpclient_test ccv_ev) 

add_executable (timer_test timer_test.cpp)
target_link_libraries (timer_test ccv_ev) 

# add_executable (signal_test signal_test.cpp)
# target_link_libraries (signal_test ccv_ev) 
